k8s/monolith-app.yml
apiVersion: v1
kind: Service
metadata:
  name: monolith-app
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    vm.kubevirt.io/name: monolith-app
  type: ClusterIP
