k8s/vm-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vm-app
  namespace: vm-apps
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: vm-app
    weight: 100
  wildcardPolicy: None
