k8s/web-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web-app
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - image: quay.io/nlembers/summit-2024-web-app:latest
        name: summit-2024-web-app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: RuntimeDefault
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-app
  name: web-app
spec:
  ports:
  - name: http
    port: 3000
  selector:
    app: web-app
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: web-app
  name: web-app
spec:
  port:
    targetPort: http
  to:
    name: web-app
    weight: 100
